# pypdfium2

./: .gitignore  .readthedocs.yaml  BUILD_SETUP_MACOS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPS.md  DEPS.txt  LICENSE-PDFium.txt  MANIFEST.in  Makefile  PLAN_font_substitution_detection.md  PLAN_font_tracking_callback_wrapping.md  PLATFORMS.csv  README.md  REUSE-wheel.toml  REUSE.toml  TASKS.md  _getdeps.py  _packaging.py  _setup_base.py  build.py  build_pdfium.py  clean.sh  example.py  getdeps.py  justfile  pypdfium2.kdev4  pyproject.toml  pytest.ini  release.sh  run  setup.cfg  setup.py  setup_all.sh  setup_base.py  setup_darwin_arm64.py  setup_darwin_x64.py  setup_linux_arm32.py  setup_linux_arm64.py  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1_pypa.yaml  1_pypa.yml  2_conda.yaml  2_conda.yml  3_other.yml  config.yml
.github/workflows/: bsd.yaml  build_packages.yaml  cibuildwheel.yaml  cibw-one.yaml  cibw.yaml  cibw_one.yaml  conda.yaml  debug.yaml  dispatch.yaml  freebsd_lo.yaml  gh_pages.yaml  main.yaml  native.yaml  native_build.yaml  native_build_one.yaml  native_one.yaml  packaging.yaml  pbin_one.yaml  release.yaml  sbuild-one-native.yaml  sbuild-one.yaml  sbuild-testonly.yaml  sbuild.yaml  sbuild_native.yaml  sbuild_native_one.yaml  sbuild_one.yaml  sbuild_one_native.yaml  test_bsd.yaml  test_native_build.yaml  test_native_build_one.yaml  test_one.yaml  test_release.yaml  test_setup.yaml  test_sourcebuild.yaml  trigger.yaml  trigger_conda_raw.yaml  trigger_main.yaml  trigger_release.yaml
.kdev4/: pypdfium2.kdev4
.reuse/: dep5  dep5-wheel
BUILD_LICENSES/: lcms.txt  libopenjpeg.txt  pdfium-binaries.txt  zlib.txt
BUILD_LICENSES/cibw/: bz2.txt  graphite.txt  harfbuzz.txt
BUILD_LICENSES/cibw_musl/: libgcc_and_libstdc++.txt
LICENSES/: Apache-2.0.txt  BSD-3-Clause.txt  CC-BY-4.0.txt  LicenseRef-PdfiumThirdParty.txt
LICENSES/BUILD_LICENSES/: agg23.txt
autorelease/: bindings.py  config.json  record.json
bindings/: README.md  bindings.py  raw.py  raw_unsafe.py
conda/: craft_conda_pkgs.py  prepare_script.py
conda/raw/: minitest.py
conda/recipe/: meta.yaml
data/: setup_status.txt
docs/: Makefile  autodocgen.py  make.bat  requirements.txt
docs/devel/: 2023_10_setup_tasks.md  changelog.md  changelog_staging.md  tasks.md
docs/markdown/: .about_wheel_license.md  add_platform.md  changelog.md  contributing.md  dependencies.md  planned_changes.md  tasks.md
docs/source/: add_platform.md  add_platform.rst  api.rst  changelog.md  changelog.rst  cli.rst  conf.py  contributing.md  contributing.rst  dependencies.rst  index.rst  pdfium_api.rst  planned_changes.md  planned_changes.rst  platforms.rst  python_api.rst  readme.md  shell_api.rst  support_api.rst
examples/: merge_pdfs.py  render_pdfiumapi.py  render_rawapi.py  render_supportapi.py  render_supportmodel.py
extra_docs/: changelog.md  dependencies.md
patches/: abseil_ppc64le_musl.patch  avoid_new_clang_flags.patch  bigendian.patch  buildtools_stdcxx_ver.patch  clang_22_compat.patch  clang_on_musl.patch  custom-BUILD.gn  ffp_contract.patch  fix_gcc_toolchain.patch  gcc_cross.patch  gcc_toolchain.patch  gn.patch  gn_build.patch  legacy_gn.patch  libpng_loong64.patch  libpng_loong64_ppc64.patch  libpng_ppc64.patch  libpng_ppc64_loong64.patch  loong64_use_lsx.patch  mips64el_cross.patch  musl_fix_libclang_rt_finder.patch  no_libclang_rt.patch  ppc64le_cross.patch  system_libcxx_with_clang.patch
patches/security/: openjpeg.patch
patches/win/: arm64_native.patch  resources.rc  use_resources_rc.patch
pdfium_patches/: android_build.patch  avoid_new_clang_flags.patch  bigendian.patch  bigendian_test.patch  cibuildwheel.patch  clang_lld_path.patch  ffp_contract.patch  passflags-BUILD.gn  public_headers.patch  single_lib.patch  siso.patch
platform_setup/: build_pdfium.py  check_deps.py  getdeps.py  packaging_base.py  setup_base.py  setup_darwin_arm64.py  setup_darwin_x64.py  setup_linux_arm32.py  setup_linux_arm64.py  setup_linux_x64.py  setup_sdist.py  setup_source.py  setup_windows_arm64.py  setup_windows_x64.py  setup_windows_x86.py  update_pdfium.py
req/: check.txt  converters.txt  default.txt  distcheck.txt  docs.txt  gn.txt  setup.txt  test.txt  utilities.txt
setupsrc/: __init__.py  _build_helpers.py  _buildbase.py  _corebase.py  _platbase.py  _verify.py  _version.py  autorelease.py  base.py  build_native.py  build_toolchained.py  craft.py  emplace.py  incver.py  system_pdfium.py  tagging.py  update.py
setupsrc/pl_setup/: autorelease.py  build_pdfium.py  check_deps.py  craft_artifacts.py  craft_packages.py  craft_wheels.py  mk_releasenotes.py  (+3 more)
strategy/: get_matrix.py  profiles.json  targets.json
tests/: __init__.py  configuration.py  conftest.py  test___main__.py  test_attachments.py  test_cli.py  test_cli_entrypoint.py  test_cli_renderer.py  test_document.py  test_font_tracking.py  test_helpers.py  test_helpers_boxes.py  test_helpers_document.py  test_helpers_loading.py  test_helpers_opener.py  test_helpers_renderer.py  test_helpers_saver.py  test_helpers_toc.py  test_helpers_utilities.py  test_main.py  test_misc.py  test_module.py  test_module_entrypoint.py  test_module_versions.py  test_nup.py  test_opener.py  test_page.py  test_pageobjects.py  test_rendering.py  test_saving.py  test_setup.py  test_setupscripts.py  test_sysfontinfo.py  test_textpage.py  test_toc.py  test_version.py
tests_old/: conftest.py  resources  test_opener.py  test_page.py  test_pageobject.py  test_renderer.py  test_saver.py  test_setup.py  test_text.py
utilities/: build.sh  check.sh  clean.sh  compcheck.py  install.sh  mk_releasenotes.py  packaging.sh  release.sh  setup_all.sh
utils/: auth_and_tag.sh  bootstrap_gn.py  build_gn.py  call_container_driver.sh  check.sh  collect_licenses.py  container_driver.py  delimit.py  enforce_install.sh  fix_venv.py  get_container.py  get_cool_date.py  get_cross_deps.py  get_gcc_prefix.py  getarch.py  inside_docker.sh  install-static-clang.sh  multitest.py  regextract.py  shallow_clone_rev.py  test_in_docker.sh  test_scriptlet.sh
(+180 files in other folders)
