# SPDX-FileCopyrightText: 2026 geisserml <geisserml@gmail.com>
# SPDX-License-Identifier: Apache-2.0 OR BSD-3-Clause

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "packaging",
    # XXX dependence on wheel is historical, with setuptools >= v70.1.0 this is not needed anymore
    "wheel !=0.38.0, !=0.38.1",
    "ctypesgen @ git+https://github.com/pypdfium2-team/ctypesgen@pypdfium2",
]

[tool.check-wheel-contents]
# W002: erroneous detection of __init__.py files as duplicates
ignore = ["W002"]
toplevel = "pypdfium2,pypdfium2_raw,pypdfium2_cli,pypdfium2_cfg"

[tool.cibuildwheel]
build-frontend = {name="build", args=["-xn"]}
before-build = [
    "pip install -r {project}/req/setup.txt",
]
test-command = [
    "python -m pypdfium2_cli --version",
    "python {project}/utils/minitest.py",
]

[tool.cibuildwheel.linux]
environment-pass = ["TEST_PDFIUM", "PDFIUM_VER", "USE_SYSROOT"]

[tool.cibuildwheel.linux.environment]
PDFIUM_PLATFORM = "sourcebuild-native"
# Vendored libc++ probably won't build with our older containers' GCC.
# It says the minimum requirement is GCC 15 or Clang 20 which is too high e.g. for Ubuntu 24.04.
BUILD_PARAMS = "--vendor all --no-vendor libc++"

[tool.cibuildwheel.macos.environment]
PDFIUM_PLATFORM = "sourcebuild-toolchained"
# cibw/delocate want a deployment target to be set
MACOSX_DEPLOYMENT_TARGET = "12.0.0"
# Make sure the OS yields its real version
SYSTEM_VERSION_COMPAT = 0

[tool.cibuildwheel.windows.environment]
PDFIUM_PLATFORM = "sourcebuild-toolchained"

[[tool.cibuildwheel.overrides]]
# run actual test suite on platforms that have pillow and numpy prebuilds on PyPI
select = "*-*linux_{x86_64,aarch64} *-macosx_{x86_64,arm64} *-win{_amd64,32}"
test-requires = ["pytest", "pillow", "numpy"]
inherit.test-command = "append"
test-command = [
    "python -m pytest {project}/tests",
]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_*"
before-all = [
    "dnf clean all && dnf makecache --refresh",
    "dnf -y install ninja-build",  # freetype-devel lcms2-devel libjpeg-devel openjpeg2-devel libpng-devel libtiff-devel zlib-devel glib2-devel harfbuzz-devel
    # "sh -c 'dnf -y install gn || true'",  # not manylinux_{i686,riscv64}
]

# manylinux_armv7l uses a Ubuntu-based image, for lack of an RHEL-based one
[[tool.cibuildwheel.overrides]]
select = "*-manylinux_armv7l"
before-all = [
    "apt-get update",
    "apt-get install -y ninja-build",  # generate-ninja libfreetype-dev liblcms2-dev libjpeg-dev libopenjp2-7-dev libpng-dev libtiff-dev zlib1g-dev libglib2.0-dev libharfbuzz-dev  # libicu-dev
]
manylinux-armv7l-image = "ghcr.io/mayeut/manylinux_2_35:latest"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux_*"
inherit.before-all = "append"
before-all = [
    "apk add ninja-build",  # gn freetype-dev lcms2-dev jpeg-dev openjpeg-dev libpng-dev tiff-dev zlib-dev glib-dev
]
inherit.environment = "append"
environment.PATH = "/usr/lib/ninja-build/bin:$PATH"

[[tool.cibuildwheel.overrides]]
select = "*-*linux_{x86_64,i686,aarch64,armv7l,ppc64le,s390x,riscv64}"  # not loongarch64
inherit.before-build = "append"
before-build = [
    "pip install --only-binary :all: -r {project}/req/gn.txt",
]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_loongarch64"
inherit.before-build = "append"
before-build = [
    "curl -LO 'https://github.com/pypdfium2-team/gn-dist/releases/download/2407.1/gn_dist-2407.1-py3-none-manylinux_2_36_loongarch64.manylinux_2_38_loongarch64.whl'",
    "pip install ./gn_dist-*_loongarch64.whl"
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux_loongarch64"
inherit.before-build = "append"
before-build = [
    "curl -LO 'https://github.com/pypdfium2-team/gn-dist/releases/download/2407.1/gn_dist-2407.1-py3-none-musllinux_1_2_loongarch64.whl'",
    "pip install ./gn_dist-*_loongarch64.whl"
]

[[tool.cibuildwheel.overrides]]
select = "*-*linux_{ppc64le,riscv64,loongarch64,s390x}"
inherit.environment-pass = "append"
environment-pass = ["RUNNER_ARCH"]
inherit.before-all = "prepend"
before-all = [
    "bash utils/install-static-clang.sh -d {project}/clang_image -m skip-download",
    "export CLANG_PREFIX=/opt/clang",
]
inherit.environment = "append"
# on glibc linux with static clang, we try to use the vendored libc++
# beware: this overrides the default BUILD_PARAMS from above
environment.BUILD_PARAMS = "--vendor all --compiler clang --clang-path /opt/clang --no-libclang-rt"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux_{ppc64le,riscv64,loongarch64,s390x}"
inherit.environment = "append"
# vendored libc++ is not compatible with musl
environment.BUILD_PARAMS = "$BUILD_PARAMS --no-vendor libc++"

[[tool.cibuildwheel.overrides]]
select = "*-*linux_s390x"
inherit.environment = "append"
environment.BUILD_PARAMS = "$BUILD_PARAMS --clang-as-gcc"

# Cross-compiled or hybrid macOS and Windows targets

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
inherit.environment = "append"
environment.BUILD_PARAMS = "--target-cpu x64"

[[tool.cibuildwheel.overrides]]
select = "*-win_arm64"
inherit.environment = "append"
environment.BUILD_PARAMS = "--target-cpu arm64"

[[tool.cibuildwheel.overrides]]
select = "*-win32"
inherit.environment = "append"
environment.BUILD_PARAMS = "--target-cpu x86"

# TODO android
