# SPDX-FileCopyrightText: 2022 geisserml <geisserml@gmail.com>
# SPDX-License-Identifier: Apache-2.0 OR BSD-3-Clause

[metadata]
name = pypdfium2
description = Python bindings to PDFium
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypdfium2-team/pypdfium2
author = pypdfium2-team
author_email = geisserml@gmail.com
license = Apache-2.0
license_files =
    LICENSES/Apache-2.0.txt
    LICENSES/BSD-3-Clause.txt
    LICENSES/CC-BY-4.0.txt
    LICENSES/LicenseRef-PdfiumThirdParty.txt
    .reuse/dep5
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries
keywords = Python, PDF, PDFium
project_urls =
    Documentation = https://pypdfium2.readthedocs.io/
    Source = https://github.com/pypdfium2-team/pypdfium2
    Tracker = https://github.com/pypdfium2-team/pypdfium2/issues

[options]
packages = find:
package_dir =
    =src
install_requires =
    Pillow>=6.0
python_requires = >=3.5
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pypdfium2 = pypdfium2._cli.main:main

[options.extras_require]
docs =
    sphinx>=4.4.0
    sphinx-rtd-theme>=1.0
    sphinxcontrib-programoutput
    docutils>=0.17
    myst-parser
test =
    pytest
build =
    setuptools>=46.1.0
    setuptools-scm
    build
    wheel
    ctypesgen
utilities =
    importchecker
    codespell
    reuse
    twine
    check-wheel-contents
