# SPDX-FileCopyrightText: 2023 geisserml <geisserml@gmail.com>
# SPDX-License-Identifier: Apache-2.0 OR BSD-3-Clause

# NOTE We have to use setup.cfg rather than pyproject.toml to declare static metadata because the latter does not permit a dynamic project name.

[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
author = pypdfium2-team
author_email = geisserml@gmail.com
url = https://github.com/pypdfium2-team/pypdfium2
project_urls =
    # TODO review/improve
    Source = https://github.com/pypdfium2-team/pypdfium2
    Tracker = https://github.com/pypdfium2-team/pypdfium2/issues
    Documentation = https://pypdfium2.readthedocs.io
    Changelog = https://pypdfium2.readthedocs.io/en/stable/changelog.html
keywords = pdf, pdfium
classifiers =
    # TODO review/improve
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries

# NOTE We use requirements files instead of [options.extras_require]. Rationale:
# - BUG(177): PyPI refuses upload if custom deps ($DEP @ git+$URL) are specified.
# - Installation is independent of pypdfium2 (allows to install setup deps beforehand and then use --no-build-isolation).
