import("//build/toolchain/gcc_toolchain.gni")

gcc_toolchain("default") {
  # for docs / available options, see the comments in //build/toolchain/gcc_toolchain.gni - they're really helpful
  cc = getenv("CC")
  cxx = getenv("CXX")
  if (cc == "") {
    cc = "gcc"
  }
  if (cxx == "") {
    cxx = "g++"
  }
  ld = cxx
  
  _tprefix = getenv("TOOLPREFIX")
  readelf = _tprefix + "readelf"
  nm = _tprefix + "nm"
  ar = _tprefix + "ar"
  
  #enable_linker_map = true
  
  # gcc_toolchain.gni says on extra_cppflags:
  # > Extra flags to be appended when compiling both C and C++ files. "CPP"
  # > stands for "C PreProcessor" in this context, although it can be
  # > used for non-preprocessor flags as well. Not to be confused with
  # > "CXX" (which follows).
  extra_cflags = getenv("CFLAGS")
  extra_cppflags = getenv("CPPFLAGS")
  extra_cxxflags = getenv("CXXFLAGS")
  extra_ldflags = getenv("LDFLAGS")
  #extra_asmflags = ...
  
  #shlib_extension = ...
  
  toolchain_args = {
    current_cpu = current_cpu
    current_os = current_os
    is_clang = false
    use_remoteexec = false
  }
}
