# build/toolchain/linux/passflags/BUILD.gn
import("//build/toolchain/gcc_toolchain.gni")

gcc_toolchain("default") {
  cc = "gcc"
  cxx = "g++"
  readelf = "readelf"
  nm = "nm"
  ar = "ar"
  ld = cxx

  # Output linker map files for binary size analysis.
  enable_linker_map = true

  # read env vars
  extra_cflags = getenv("CFLAGS")
  extra_cppflags = getenv("CPPFLAGS")
  extra_cxxflags = getenv("CXXFLAGS")
  extra_ldflags = getenv("LDFLAGS")

  toolchain_args = {
    current_cpu = current_cpu
    current_os = current_os
  }
}
